# SDL_mixer

./: CMakeLists.txt
cmake/template/: Config.cmake.in
